--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@ Google Map to your resume!
     <ul id="topContacts" class="flex-box"></ul>
   </div>
   <div style="clear: both;"></div>
-  <div id="workExperience" class="gray">
+  <div id="workExperience" class="gray w3-card-2">
     <h2>Work Experience</h2>
   </div>
   <div id="projects">
     <h2>Projects</h2>
   </div>
-  <div id="education" class="gray">
+  <div id="education" class="gray w3-card-2">
     <h2>Education</h2>
   </div>
   <div id="mapDiv">
     <h2>Where I've Lived and Worked</h2>
   </div>
   <div id="lets-connect" class="dark-gray">
-    <h2 class="orange center-text">Let's Connect</h2>
+    <h2 class="orange center-text connect">Let's Connect</h2>
     <ul id="footerContacts" class="flex-box">
     </ul>
   </div>
